--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,11 @@
-### IntelliJ IDEA ###
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+# Default ignored files
+/shelf/
+/.idea/workspace.xml
 
 .idea
-calories-counter-master.iml
+
+calories-counter.iml
+vcs.xml
+workspace.xml
 misc.xml
 modules.xml
-vcs.xml
-
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
-
-### Mac OS ###
-.DS_Store
